CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

18 July 2008
+ Javascript prompt: fixed the encode function
+ Fixed problems with the categories conversion.

16 July 2008
+ Added a force_array parameter to Database class. Allows symmetry of
  repeat results on an index.
+ Added information in Database documentation concerning force_array.
+ Removed append function documentation from Settings. Added comment note.


15 July 2008
+ Database: added longtext to homogenize function
+ Database: added parameter to update and delete that returns the
  affected rows on success

14 July 2008
+ Added patch #2017069 by Eloi George. Adds a cache identifier to DBPager.
+ Added patch #1997460 by Eloi George. Class and title added to
  confirm script.

7 July 2008
+ getObjects with setIndexBy now works better if you have identical indices.

2 July 2008
+ Added farbtastic color picker
+ Added farbtastic creator to CREDITS
+ Error message added to block conversion.
+ Updated: javascript/pick_color/

30 June 2008
+ Database : inDatabase function was still checking for column
  existance if not set. Fixed. Thanks Hilmar.

27 June 2008
+ added textarea to required_input javascript
+ added slider javascript

23 June 2008
+ Change to url retrieval function. Some servers return a different
  value for redirect_url than the request_uri. Switching them.
+ getTemplateDirectory checks if in branch to determine returned
  module directory. Helps with hub development.

19 June 2008
+ More work on XMLParser

18 June 2008
+ Fixed a bug in XMLParser that didn't stack arrays properly.
+ Removed unsigned calls in the core update.
+ Database : Added function alterColumnType
+ DBPager : current page is now bracketed and unlinked
+ setRequired will post a javascript alert if the required input it
  left blank. Works with text fields only at this point. More left to
  do.
+ js_calendar : fixed error notice