@@ -5,6 +5,9 @@ its own separate CHANGELOG file.
 18 July 2008
 + Javascript prompt: fixed the encode function
 + Fixed problems with the categories conversion.
++ Database: Bug #1988949 added tilde as allowable url character.
++ Database: Patch #2014480, Database exports multiple part primary
+  keys. Thanks Hilmar
 
 16 July 2008
 + Added a force_array parameter to Database class. Allows symmetry of
